--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <article class='tend m-5'>
+        <article class='tend container m-5'>
             <h5 class='font-weight-bold' id='tendencias'>TENDENCIAS</h5>
             <div class="my-4 row justify-content-center">
                 <div class="tendThumbnails nuevo col-3">
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </article>
-        <article class='blog m-5'>
+        <article class='blog container-fluid m-5'>
             <h5 class='font-weight-bold' id='blog'>BLOG</h5>
             <div class="row py-5">
                 <div class="bigBlogEntries col-md-12 col-lg-8">
