--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./scripts/jquery-3.4.1.min.js"></script>
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="./scripts/script.js"></script>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Blog de Viajes</title>
 </head>
 
@@ -88,9 +88,9 @@
                 </div>
             </div>
         </div>
-        <article class='tend container m-5'>
+        <article class='my-5 container tend'>
             <h5 class='font-weight-bold' id='tendencias'>TENDENCIAS</h5>
-            <div class="my-4 row justify-content-center">
+            <div class="row justify-content-center">
                 <div class="tendThumbnails nuevo col-3">
                     <img src="./Assets/img/card_01.png " alt="Montañas y magia">
                     <div class="texto">
@@ -114,9 +114,9 @@
                 </div>
             </div>
         </article>
-        <article class='blog container-fluid m-5'>
-            <h5 class='font-weight-bold' id='blog'>BLOG</h5>
-            <div class="row py-5">
+        <article class='my-5 blog container-fluid '>
+            <h5 class='m-5 font-weight-bold' id='blog'>BLOG</h5>
+            <div class="row">
                 <div class="bigBlogEntries col-md-12 col-lg-8">
                     <div class="newEntry mb-3">
                         <img src="./Assets/img/articulo_big_01.png" alt="puente">
