--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 </div>
             </div>
         </article>
-        <article class='my-5 blog container-fluid '>
-            <h5 class='m-5 font-weight-bold' id='blog'>BLOG</h5>
-            <div class="row">
+        <article class='my-5 blog container '>
+            <h5 class='my-5 font-weight-bold' id='blog'>BLOG</h5>
+            <div class="row ">
                 <div class="bigBlogEntries col-md-12 col-lg-8">
                     <div class="newEntry mb-3">
                         <img src="./Assets/img/articulo_big_01.png" alt="puente">
